feat: quantity selector logic

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <a href="#">Contact</a>
             </nav>
         </div>
+
         <div class="nav-right">
             <button class="cart-btn">
                 <img src="" alt="Cart">
@@ -50,9 +51,9 @@
 
             <div class="actions">
                 <div class="quantity">
-                    <button>-</button>
-                    <span>0</span>
-                    <button>+</button>
+                    <button class="minus">-</button>
+                    <span class="quantity-value">0</span>
+                    <button class="plus">+</button>
                 </div>
 
                 <button class="add-to-cart">
