feat: cart dropdown empty state

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="nav-left">
             <button class="menu-btn"><i class="fa-solid fa-bars"></i></button>
-            <img src="" alt="Sneakers logo">
+            <img src="images/logo.svg" alt="Sneakers logo">
             <nav class="nav-links">
                 <a href="#">Collections</a>
                 <a href="#">Men</a>
@@ -23,16 +23,22 @@
 
         <div class="nav-right">
             <button class="cart-btn">
-                <img src="" alt="Cart">
+                <img src="images/icon-cart.svg" alt="Cart">
                 <span class="cart-count">0</span>
             </button>
-            <img class="avatar" src="" alt="User avatar">
+            <div class="cart-dropdown">
+                <h3>Cart</h3>
+                <div class="cart-content">
+                    <p class="empty-cart">Your cart is empty.</p>
+                </div>
+            </div> 
+            <img class="avatar" src="images/image-avatar.png" alt="User avatar">
         </div>
     </header>
 
     <main class="product">
         <section class="gallery">
-            <img class="main-image" src="" alt="Product">
+            <img class="main-image" src="images/image-product-1.jpg" alt="Product">
             <div class="thumbnails">
 
             </div>
@@ -40,7 +46,7 @@
 
         <section class="details">
             <h4>SNEAKER COMPANY</h4>
-            <h1>Fall Limited Edition Sneaker</h1>
+            <h1>Fall Limited Edition Sneakers</h1>
             <p>These low-profile sneakers are your perfect casual wear companion...</p>
 
             <div class="price">
