feat: product image gallery with thumbnails

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         <section class="gallery">
             <img class="main-image" src="images/image-product-1.jpg" alt="Product">
             <div class="thumbnails">
-
+                <img src="images/image-product-1-thumbnail.jpg" data-index="1" class="thumb active" />
+                <img src="images/image-product-2-thumbnail.jpg" data-index="2" class="thumb" />
+                <img src="images/image-product-3-thumbnail.jpg" data-index="3" class="thumb" />
+                <img src="images/image-product-4-thumbnail.jpg" data-index="4" class="thumb" />
             </div>
         </section>
 
