feat: mobile menu and mobile image slider

--- a/index.html
+++ b/index.html
@@ -56,9 +56,24 @@
         </div>
     </header>
 
+    <div class="mobile-menu hidden">
+        <div class="mobile-overlay"></div>
+
+        <nav class="mobile-nav">
+            <button class="close-menu"><i class="fa-solid fa-x"></i></button>
+            <a href="#">Collections</a>
+            <a href="#">Men</a>
+            <a href="#">Lomen</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </nav>
+    </div>
+
     <main class="product">
         <section class="gallery">
+            <button class="mobile-prev"><i class="fa-solid fa-angle-left"></i></button>
             <img class="main-image" src="images/image-product-1.jpg" alt="Product">
+            <button class="mobile-next"><i class="fa-solid fa-angle-right"></i></button>
             <div class="thumbnails">
                 <img src="images/image-product-1-thumbnail.jpg" data-index="1" class="thumb active" />
                 <img src="images/image-product-2-thumbnail.jpg" data-index="2" class="thumb" />
