feat: finetuning css desktop design

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="nav-left">
-            <button class="menu-btn"><i class="fa-solid fa-bars"></i></button>
+            <button class="menu-btn hidden"><i class="fa-solid fa-bars"></i></button>
             <img src="images/logo.svg" alt="Sneakers logo">
             <nav class="nav-links">
                 <a href="#">Collections</a>
@@ -63,7 +63,7 @@
             <button class="close-menu"><i class="fa-solid fa-x"></i></button>
             <a href="#">Collections</a>
             <a href="#">Men</a>
-            <a href="#">Lomen</a>
+            <a href="#">Women</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
         </nav>
@@ -90,7 +90,7 @@
             <div class="price">
                 <span class="current">$125.00</span>
                 <span class="discount">50%</span>
-                <span class="old">$250.00</span>
+                <p class="old">$250.00</p>
             </div>
 
             <div class="actions">
