feat: UI bug fixes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="nav-left">
-            <button class="menu-btn hidden"><i class="fa-solid fa-bars"></i></button>
+            <button class="menu-btn"><i class="fa-solid fa-bars"></i></button>
             <img src="images/logo.svg" alt="Sneakers logo">
             <nav class="nav-links">
                 <a href="#">Collections</a>
